feat: mettre à jour le fichier docker-compose pour utiliser le contexte de construction et le Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   portfolio:
-    build: /home/adrien/portfolio-react
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: portfolio_react
     ports:
       - "8080:80"
